--- a/isms-backend/pom.xml
+++ b/isms-backend/pom.xml
@@ -7,7 +7,6 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.4.1</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <artifactId>isms-backend</artifactId>
@@ -26,6 +25,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>ir.piana.isms</groupId>
+            <artifactId>risk-management-provider</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>ir.piana.isms</groupId>
