--- a/module-parent/pom.xml
+++ b/module-parent/pom.xml
@@ -7,7 +7,6 @@
 		<groupId>ir.piana.isms</groupId>
 		<artifactId>piana-isms</artifactId>
 		<version>1.0-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<artifactId>module-parent</artifactId>
@@ -26,6 +25,8 @@
 		<module>general-provider</module>
 		<module>basic-info</module>
 		<module>basic-info-provider</module>
+		<module>risk-management</module>
+		<module>risk-management-provider</module>
 	</modules>
 
 	<build>
