--- a/module-parent/risk-management/pom.xml
+++ b/module-parent/risk-management/pom.xml
@@ -9,8 +9,8 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>auth</artifactId>
-	<name>auth</name>
+	<artifactId>risk-management</artifactId>
+	<name>risk-management</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -18,6 +18,12 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>ir.piana.isms</groupId>
+			<artifactId>data</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>ir.piana.isms</groupId>
 			<artifactId>isms-common</artifactId>
