--- a/isms-ui/package.json
+++ b/isms-ui/package.json
@@ -31,7 +31,8 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@types/axios": "^0.14.0",
     "bootstrap": "^5.0.1",
-    "bulma": "^0.9.1",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "jquery": "^3.5.1",
     "mat-file-upload": "^11.1.2",
     "ng2-jalali-date-picker": "^2.4.2",
