--- a/isms-backend/pom.xml
+++ b/isms-backend/pom.xml
@@ -7,6 +7,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.4.1</version>
+        <relativePath />
     </parent>
 
     <artifactId>isms-backend</artifactId>
